@@ -1,3 +1,9 @@
+2009-01-14  Gordon Williams  <gordon.williams@collabora.co.uk>
+
+	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c:
+	  Modified XShape handling for windows to allow EGLX and GLX TFP 
+	  textures to be rendered correctly.
+
 2009-01-13  Thomas Thurman  <thomas.thurman@collabora.co.uk>
 
 	* matchbox/core/mb-wm-decor.h: declare mb_wm_decor_class_type().
